--- a/test5cp.html
+++ b/test5cp.html
@@ -189,6 +189,12 @@
         display: flex;
     }
 
+.reviews {
+    font-family: Roboto-Regular;
+    color: #757575;
+    font-size: 12px;
+}
+
 </style>
 </head>
 <body>
